last pull request swapped dark mode a light mode due to testing this is a fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -55,7 +55,7 @@
 }
 
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
 	/* defaults to dark theme */
 	:root {
 		--yellow : var(--yellow-dark-theme);
